--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,14 @@ jobs:
       with:
         go-version: 1.19
 
-    #- name: Build
-    # run: go build -v ./...
+    - name: Build-DB
+      run: docker-compose build
+
+    - name: Create-DB
+      run: docker-compose up
+
+    - name: Build
+      run: go build -v main.go
 
     - name: Test
-      run: go test -v ./main_test.go
+      run: go test -v main_test.go
