--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,32 +3,39 @@
 
 name: Go
 
+env:
+  DATABASE_HOST: localhost
+
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
 
-    - name: Build-DB
-      run: docker-compose build
+      - name: Build-DB
+        run: docker-compose build
 
-    - name: Create-DB
-      run: docker-compose up -d
+      - name: Create-DB
+        run: docker-compose up -d
 
-    - name: Test
-      run: go test -v main_test.go
+      - name: Test
+        run: go test -v main_test.go
 
-    - name: Build
-      run: go build -v main.go
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: go build -v main.go
